--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,11 @@
         <version>3.0.1</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.2.2</version>
+    </dependency>
 </dependencies>
+
 </project>
