adding users in database without mistakes

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:postgresql://localhost:5432/fix_users_db
+db.url=jdbc:postgresql://localhost:5432/fix_user_db
 db.username=postgres
 db.password=rusik22801
 db.driverClassName=org.postgresql.Driver
