--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
         <artifactId>postgresql</artifactId>
         <version>42.2.2</version>
     </dependency>
+    <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
 </dependencies>
 
 </project>
